--- a/CHANGES
+++ b/CHANGES
@@ -6,3 +6,5 @@
 
 2020.07.05 Added &univalent
 2020.07.05 Added optional observer to &parser
+2020.10.30 Available on GitHub - see "How To Contribute"
+
